# helix-editor

./: Cargo.toml  languages.toml  rust-toolchain.toml
.github/workflows/: build.yml  release.yml
book/src/: editor.md  keymap.md
docs/superpowers/specs/: 2026-04-06-debug-redesign-design.md
helix-core/src/: fold.rs  lib.rs  selection.rs  syntax.rs
helix-core/src/syntax/: config.rs
helix-dap/: Cargo.toml
helix-dap-types/: Cargo.toml
helix-dap-types/src/: events.rs  lib.rs  requests.rs  types.rs
helix-dap/src/: client.rs  connection.rs  lib.rs  transport.rs
helix-lsp/src/: client.rs  lib.rs
helix-stdx/: Cargo.toml
helix-term/: Cargo.toml
helix-term/src/: application.rs  args.rs  commands.rs  compositor.rs  config.rs  health.rs  main.rs
helix-term/src/commands/: dap.rs  lsp.rs  syntax.rs  typed.rs
helix-term/src/handlers/: document_colors.rs
helix-term/src/keymap/: default.rs
helix-term/src/ui/: completion.rs  confirm_dialog.rs  diff_text.rs  document.rs  editor.rs  explorer.rs  image_view.rs  info.rs  input_dialog.rs  lsp.rs  markdown.rs  menu.rs  mod.rs  picker.rs  popup.rs  prompt.rs  reference_finder.rs  select.rs  spinner.rs  statusline.rs  terminal.rs  terminal_float.rs  text.rs  tree.rs
helix-tui/: Cargo.toml
helix-tui/src/: terminal.rs
helix-tui/src/backend/: mod.rs  (+1 more)
helix-vcs/: Cargo.toml
helix-vcs/src/: git.rs  lib.rs  status.rs
helix-view/: Cargo.toml
helix-view/src/: document.rs  editor.rs  file_watcher.rs  graphics.rs  gutter.rs  icons.rs  info.rs  lib.rs  scp.rs  view.rs
master/: lang-support.html  print.html
(+36 files in other folders)
