[package]
name = "helix-dap-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
description = "DAP (Debug Adapter Protocol) type definitions for Helix"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
