[package]
name = "helix-dap"
description = "DAP client implementation for Helix"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
helix-dap-types = { path = "../helix-dap-types" }

anyhow = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tokio = { version = "1.50", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot", "sync", "net"] }
